black key placement corrected for last key which was taking extra space and producting horizontal scroll

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ main {
 main .piano {
   width: 100%;
   height: 300px;
-  background: #6e0e0e;
+  background: #000;
   position: relative;
 }
 main .piano .white-keys {
